# src/database/dtos/cobranca.dto.js
@@ -13,8 +13,8 @@ const CobrancaDTO = Joi.object().keys({
     .optional()
     .items(
       Joi.object().keys({
-        _idMovimentacao: Joi.objectId().required(),
-        _idLeitura: Joi.objectId().required(),
+        _idMovimentacao: Joi.objectId().optional(),
+        _idLeitura: Joi.objectId().optional(),
         valor: Joi.number().default(0),
         valorRateado: Joi.number().default(0),
       })
